// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DefaultPage renders correctly 1`] = `
<main>
  <header />
  <section
    className="section"
  >
    <div
      className="container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          ref={null}
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {
                    "children": "HTML",
                  },
                  "type": "p",
                },
              }
            }
          />
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`DefaultPageTemplate renders content correctly 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          ref={null}
        >
          <div>
            content
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`DefaultPageTemplate renders html content correctly 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          ref={null}
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {
                    "children": "Html content",
                  },
                  "type": "p",
                },
              }
            }
          />
        </div>
      </div>
    </div>
  </section>,
]
`;
